<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dream_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.dreamteam.DreamTeam">

    <TextView
        android:id="@+id/dt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:background="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rhr"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_keeper"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:textAppearance="?android:textAppearanceSmall"/>

    </RelativeLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@android:color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rmo"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid_fielders"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:textAppearance="?android:textAppearanceSmall"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rnp"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/striker"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/ustxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingLeft="6dp"
            android:fontFamily="sans-serif-light"
            android:textSize="60sp"
            android:layout_marginTop="-10dp"/>

        <TextView
            android:id="@+id/stoppintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stoppin"
            android:layout_above="@id/ustxt"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingLeft="6dp"
            android:paddingTop="2dp"
            android:fontFamily="sans-serif-light"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingLeft="6dp"
            android:paddingTop="2dp"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:layout_above="@+id/stoppintxt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView2" />

    </RelativeLayout>

</LinearLayout>
